Fixed spacing

--- a/src/css/partner-profile-page.less
+++ b/src/css/partner-profile-page.less
@@ -4,7 +4,7 @@
 
     @text-color: #444;
 
-    padding: 60px 0 150px 0;
+    padding: 60px 0 60px 0;
     min-height: 80vh;
 
     font-family: "Fira Sans", Helvetica, Arial, sans-serif;
@@ -102,4 +102,9 @@
             }
         }
     }
+
+    #additional-content {
+        margin-bottom: 50px;
+    }
+
 }
